2008-04-24  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_store_[file|spool].c: use internal function pointer while
      packing/unpacking the Msg struct.
    * gw/bb_store.[ch]: add store_msg_pack and store_msg_unpack function
      pointers, allowing a box to pass their own msg_[un]pack() functions
      to the storage subsystem, in case they use a different serialization.
    * gw/bearerbox.c, test/test_store_dump.c: add the function pointers
      for packing/unpack to store_init() call.
    * gw/msg.[ch]: we need a wrapper for msg_unpack(), for passing it as
      function pointer argument, since it's a preprocessor macro.

2008-04-21  Stipe Tolj  <stolj at kannel.org>
    * gwlib/socket.[ch]: add host_port() function in accordance to host_ip()
      to get the port number of a TCP connection in use.

2008-04-17  Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_ois.c: fixed compiler warning.
    
2008-04-16  Andreas Fink <andreas at fink.org>
    * wap/wsp_[strings|unit|init|pdu].c: fixed compiler warnings due to 
      signed/unsigned char mismatch.

2008-04-09  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: fix 'make clean' target, by fixing find expression.

2008-04-09	Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add missing documentation block for 
      'alt-dcs' in smsc group.

2008-03-23	Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_at.c: fix at2_wait_modem_command() to ignore specific OK
      responses for AT+CNMA acknowledges.
      Thanks to Marius Huysamen <mhuysamen at mhg.co.za> for providing patch.
      [Msg-Id: <47C93579.8000409@mhg.co.za>]

2008-03-15 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smscconn.c, gw/smscconn_p.h,
      gwlib/cfg.def: Implemented max-sms-octets config option that
      allows to set maximum length of SMS for SMSC.

2008-03-10  Andreas Fink <andreas at fink.org>
    * gw/smsc/*: fixed a lot of warning due to pointer type mismatch