@@ -313,6 +313,7 @@ MULTI_GROUP(smsc,
     OCTSTR(host)
     OCTSTR(alt-host)
     OCTSTR(port)
+    OCTSTR(port-ssl)
     OCTSTR(alt-port)
     OCTSTR(smsc-username)
     OCTSTR(smsc-password)
@@ -324,6 +325,7 @@ MULTI_GROUP(smsc,
     OCTSTR(validityperiod)
     OCTSTR(our-port)
     OCTSTR(receive-port)
+    OCTSTR(receive-port-ssl)
     OCTSTR(connect-allow-ip)
     OCTSTR(system-id)
     OCTSTR(system-type)
